--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 [
 {
 "Avatar":"https://github.com/DevNguyenStudio/DN_Turbo_Map_CHRISTMAS/raw/main/Avatar.png",
-"Name":"Nguyễn Hoàng Lê Nguyên ( DN Turbo - J4N3 )"
+"Name":"Nguyễn Hoàng Lê Nguyên ( DN Turbo - J4N3 )",
+"YouTube":"https://youtube.com/c/DNTurbo",
+"Messenger":"https://m.me/106815178343026",
+"Facebook":"https://www.facebook.com/groups/2855336027900957/?ref=share_group_link",
+"Page":"https://www.facebook.com/DNTurbo/"
 }
 ]
